Small fix for footer navigation width/display on mobile.

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -4519,7 +4519,7 @@ table legend {
 
 #footernav{
     margin: 0 auto; padding: 0;
-    width:275px;
+    width:250px;
 }
 
 @media screen and (min-width:801px) {
